gmail/style.css
/* ... */
html.simpl
  .aeN
  div[role="complementary"]
  > div[role="navigation"]
  > div:nth-child(2)
  .aim
  .TN {
  padding: 0 10px;
}
html.simpl
  .aeN
  div[role="complementary"]
  > div[role="navigation"]
  > div:nth-child(2)
  .aim
  .TO {
  border-radius: 16px;
}

/* Change action label to something shown on hover */
html.simpl
  .aeN
  div[role="complementary"]
  > div[role="navigation"]
  > div:nth-child(2)
  .aim
  .aio {
  display: none;
}
html.simpl
  .aeN
  div[role="complementary"]
  > div[role="navigation"]
  > div:nth-child(2)
  .aim:hover
  .aio {
  display: block !important;
  position: absolute;
  top: 0px;
  left: -150px;
  width: fit-content;
  max-width: 130px;
  border-radius: 4px;
  padding: 5px 12px 7px 12px;
  background-color: white;
}
html.simpl
  .aeN
  div[role="complementary"]
  > div[role="navigation"]
  > div:nth-child(2)
  .aim:nth-child(2):hover
  .aio {
  left: -190px;
}
html.simpl
  .aeN
  div[role="complementary"]
  > div[role="navigation"]
  > div:nth-child(2)
  .aim:hover
  .aio
  a {
  color: #202124;
  text-shadow: none;
  white-space: nowrap;
}

/* Move start call buttons when chat is minimized */
html.simpl
  .aeN
  div[role="complementary"][style*="height: 0px"]
  > div[role="navigation"]
  > div:nth-child(2) {
  z-index: 999;
  right: 48px;
}
html.simpl
  .aeN
  div[role="complementary"][style*="height: 0px"]
  > div[role="navigation"]
  > div:nth-child(2)
  .aim:hover
  .aio {
  display: none !important;
}

/* ====================================================================
 * INBOX DATE GROUPING
 */

html.simpl tr[date="today"],
html.simpl tr[date="yesterday"],
html.simpl tr[date="month0"],
html.simpl tr[date="month1"],
html.simpl tr[date="month2"],
html.simpl tr[date="earlier"] {
  margin-top: 3em;
}
html.simpl tr[date="today"] ~ tr[date="today"],
html.simpl tr[date="yesterday"] ~ tr[date="yesterday"],
html.simpl tr[date="month0"] ~ tr[date="month0"],
html.simpl tr[date="month1"] ~ tr[date="month1"],
html.simpl tr[date="month2"] ~ tr[date="month2"],
html.simpl tr[date="earlier"] ~ tr[date="earlier"] {
  margin-top: initial;
}

html.simpl tr[date="today"]::before,
html.simpl tr[date="yesterday"]::before,
html.simpl tr[date="month0"]::before,
html.simpl tr[date="month1"]::before,
html.simpl tr[date="month2"]::before,
html.simpl tr[date="earlier"]::before {
  height: 0px;
  width: 0px;
  white-space: nowrap;
  overflow: visible;
  font-size: 0.7em;
  letter-spacing: 1.2;
  color: #aaa;
  font-weight: bold;
  display: block;
  position: relative;
  top: -32px;
  left: 16px;
}

html.simpl.mediumTheme tr[date="today"]::before,
html.simpl.mediumTheme tr[date="yesterday"]::before,
html.simpl.mediumTheme tr[date="month0"]::before,
html.simpl.mediumTheme tr[date="month1"]::before,
html.simpl.mediumTheme tr[date="month2"]::before,
html.simpl.mediumTheme tr[date="earlier"]::before,
html.simpl.darkTheme tr[date="today"]::before,
html.simpl.darkTheme tr[date="yesterday"]::before,
html.simpl.darkTheme tr[date="month0"]::before,
html.simpl.darkTheme tr[date="month1"]::before,
html.simpl.darkTheme tr[date="month2"]::before,
html.simpl.darkTheme tr[date="earlier"]::before {
  color: #ffffff;
}

html.simpl tr[date="today"]::before {
  content: "TODAY";
}
html.simpl tr[date="yesterday"]::before {
  content: "YESTERDAY";
}
html.simpl tr[date="month0"]::before {
  content: "THIS MONTH";
}
html.simpl tr[date="month1"]::before {
  content: "LAST MONTH";
}
html.simpl tr[date="earlier"]::before {
  content: "EARLIER";
}

html.simpl tr[date="today"] ~ tr[date="today"]::before,
html.simpl tr[date="yesterday"] ~ tr[date="yesterday"]::before,
html.simpl tr[date="month0"] ~ tr[date="month0"]::before,
html.simpl tr[date="month1"] ~ tr[date="month1"]::before,
html.simpl tr[date="month2"] ~ tr[date="month2"]::before,
html.simpl tr[date="earlier"] ~ tr[date="earlier"]::before {
  content: "";
  display: none;
}

/* ====================================================================
 * GLOBAL / APP-LEVEL
 */

/* Hide footer
html.simpl.multiBoxHorz .pfiaof,
html.simpl.multiBoxVert .pfiaof,
html.simpl .ae4 + .pfiaof,
*/
html.simpl .aeG,
html.simpl .pfiaof,
html.simpl.readingPane .apc,
html.simpl.readingPane .apO {
  display: none;
}

/* Move and restyle banners (vacation auto-responder, account delegation) */
html.simpl .w-MH,
html.simpl .ZY,
html.simpl .w-asV .aG,
html.simpl .bir {
  position: fixed;
  width: auto;
  max-width: 300px;
  text-align: left;
  padding: 18px 24px;
  bottom: 24px;
  left: 24px;
  font-size: 0.875rem;
  font-weight: bold;
  border: none;
  box-shadow: 0 1px 3px 0 rgba(60, 64, 67, 0.302),
    0 4px 8px 3px rgba(60, 64, 67, 0.149);
  border-radius: 2px;

  /* Override the black on yellow default theme */
  color: #fff;
  background-color: #202124;
}
html.simpl .w-MH .e,
html.simpl .ZY .e,
html.simpl .w-asV .aG a,
html.simpl .bir a {
  margin-left: 16px;
  color: #8ab4f8;
}

/* ====================================================================
 * APP BAR (menu and account switcher + container for search)
 */

/* Hide Gmail logo and name */
html.simpl #gb a[href="#inbox"] {
  display: none !important;
}

/* Hide App Switcher */
html.simpl #gbwa {
  display: none !important;
  position: absolute;
  right: 0px;
  padding: 12px 66px 14px 12px;
  margin: -8px -12px 0 0;
}
html.simpl.appSwitcher #gbwa {
  display: block !important;
}
html.simpl.appSwitcher.quickSettings #gb .FI,
html.simpl.appSwitcher.quickSettings #gb div[data-tooltip="Settings"] {
  display: none;
}

/* Remove padding around profile photo so settings is better spaced */
/* UNSTABLE */
html.simpl .gb_Da {
  padding-left: 2px !important;
}

/* Clean up the butter bar (loading, etc) */
html.simpl .vX .vh {
  border: none;
  border-radius: 0 0 4px 4px;
  padding: 8px 16px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
}

/* Reduce width of app bar when Addons are open */
html.simpl.addOnsOpen header#gb {
  width: calc(100vw - 300px);
}
/* ... */

